--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ development:
   pool: 5
   username: hugagoth
   password: hugagothdev
-  socket: /var/run/mysqld/mysqld.sock
+  socket:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
