--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,8 @@ development:
   encoding: utf8
   database: hugagoth_development
   pool: 5
-  username: hugagoth
-  password: hugagothdev
+  username: root
+  password:
   socket:
 
 # Warning: The database defined as "test" will be erased and
